--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -1,8 +1,17 @@
-*{
+* {
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
 }
 
-nav{
+nav {
     top: 0;
+}
+
+h1 {
+    font-weight: 900;
+}
+
+h2 {
+    font-weight: 700;
 }
