--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -11,6 +11,12 @@ nav{
     top: 0;
     position: fixed;
     width: 100vw;
+    font-size: 5vh;
+}
+
+nav > a{
+    text-decoration: none;
+    color: #ffffff;
 }
 
 nav > a > img{
