--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+html{
+    font-family: 'Roboto', sans-serif;
+}
+
 nav{
     height: 10vh;
     background-color: #181212;
@@ -14,25 +18,24 @@ nav{
     font-size: 5vh;
 }
 
+nav > a > img{
+    height: 100%;
+}
+
 nav > a{
     text-decoration: none;
     color: #ffffff;
 }
 body {
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    margin: 0;
-    padding: 10px;
     display: flex;
     background: #f2f2f2;
     color: rgba(0,0,0,.87);
-    font-family: 'Roboto', sans-serif;
 }
 
 
 .accordion {
     margin: auto;
-    width: 40rem;
+    width: 100vw;
 }
 .accordion input {
     display: none;
