--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -1,7 +1,12 @@
+:root{
+    --prievewColor: #ffffff;
+}
+
 * {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 nav{
@@ -11,20 +16,30 @@ nav{
     top: 0;
 }
 body {
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
-    padding: 10px;
-    display: flex;
     background: #f2f2f2;
     color: rgba(0,0,0,.87);
-    font-family: 'Roboto', sans-serif;
+    grid-template-areas: 
+    "nav"
+    "preview"
+    "accordion";
 }
 
+nav{
+    grid-area: nav;
+}
+
+.preview{
+    grid-area: preview;
+}
 
 .accordion {
+    grid-area: accordion;
     margin: auto;
-    width: 40rem;
 }
 .accordion input {
     display: none;
@@ -61,7 +76,7 @@ header .box-title {
     cursor: initial;
 }
 .box-title {
-    width: calc(100% - 40px);
+
     height: 64px;
     line-height: 64px;
     padding: 0 20px;
@@ -75,8 +90,6 @@ header .box-title {
     user-select: none;
 }
 .box-content {
-    width: calc(100% - 40px);
-    padding: 30px 20px;
     font-size: 11pt;
     color: rgba(0,0,0,.54);
     display: none;
@@ -84,7 +97,7 @@ header .box-title {
 .box-close {
     position: absolute;
     height: 64px;
-    width: 100%;
+
     top: 0;
     left: 0;
     cursor: pointer;
@@ -106,7 +119,7 @@ input:checked + .box .box-close {
 
 .arrows section .box-title {
     padding-left: 44px;
-    width: calc(100% - 64px);
+    width: 100vw;
 }
 .arrows section .box-title:before {
     position: absolute;
@@ -114,10 +127,22 @@ input:checked + .box .box-close {
     content: '\203a';
     font-size: 18pt;
     left: 20px;
-    top: -2px;
     transition: transform .15s ease-in-out;
     color: rgba(0,0,0,.54);
 }
 input:checked + section.box .box-title:before {
     transform: rotate(90deg);
+}
+
+/* styling preview */
+.preview{
+    width: 100vw;
+    }
+
+.preview > p{
+    width: 100vw;
+    padding: 1rem; width: 95% ;
+    background-color: black;
+    color: var(--prievewColor);
+    font-family: 'led_dot_matrix', sans-serif;
 }
