--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -1,5 +1,8 @@
 :root{
-    --previewColor: #ffffff;
+    --blackDark: #181212;
+    --textLight: #ffffff;
+    --backround: #15616D;
+    
 }
 
 * {
@@ -9,35 +12,63 @@
     font-family: 'Roboto', sans-serif;
 }
 
-nav{
-    padding: 1rem;
-    height: 10vh;
-    background-color: #181212;
-    line-height: 10vh;
-    top: 0;
-    grid-area: nav;
-}
-body {
+body{
     display: grid;
-    grid-template-columns: 1fr;
-    width: 100vw;
-    margin: 0;
-    background: #f2f2f2;
-    color: rgba(0,0,0,.87);
     grid-template-areas: 
     "nav"
     "preview"
     "accordion";
-    height: 100vh;
+    width: 100vw;
+    background-color: var(--backround);
 }
 
-.accordion {
-    height: 80vh;
+nav{
+    grid-area: nav;
+    height: 10vh;
+    background-color: var(--blackDark);
+}
+
+nav > a{
+    color: var(--textLight);
+    text-decoration: none;
+}
+
+.preview{
+    grid-area: preview;
+    height: 20vh;
+    text-align: center;
+    background-color: var(--blackDark);
+}
+
+.accordion{
     grid-area: accordion;
+    height: 70vh;
+    text-align: center;
 }
 
-.accordion input[type="radio"] {
+nav, .preview, .accordion{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type="radio"]{
     display: none;
+}
+
+.colourBox{
+    padding-left: 15.5vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 69vw;
+    gap: 3vw
+}
+
+.colourButton{
+    width: 20vw;
+    height: 20vw;
+    border: none;
+    border-radius: 10px;
 }
 
 .box {
@@ -54,63 +85,34 @@ body {
     left: 0;
     right: 0;
     pointer-events: none;
-    box-shadow: 0 -1px 0 #e5e5e5,0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
 }
 header.box {
     background: rgb(19, 19, 19);
     z-index: 100;
     cursor: initial;
-    box-shadow: 0 -1px 0 #e5e5e5,0 0 2px -2px rgba(0,0,0,.12),0 2px 4px -4px rgba(0,0,0,.24);
 }
-header .box-title {
-    margin: 0;
-    font-weight: normal;
-    font-size: 16pt;
-    color: white;
-    cursor: initial;
-}
+
 .box-title {
-
-    height: 64px;
-    line-height: 64px;
-    padding: 0 20px;
+    height: 5vh;
+    line-height: 5vh;
     display: inline-block;
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    background-color: var(--backround);
+    color: var(--textLight);
 }
+
 .box-content {
-    font-size: 11pt;
-    color: rgba(0,0,0,.54);
+    height: 50vh;
     display: none;
+    background-color: var(--backround);
+    width: 100vw;
 }
-.box-close {
-    position: absolute;
-    height: 64px;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-    display: none;
-}
-input:checked + .box {
-    height: auto;
-    box-shadow: 0 0 6px rgba(0,0,0,.16),0 6px 12px rgba(0,0,0,.32);
-}
-input:checked + .box .box-title {
-    border-bottom: 1px solid rgba(0,0,0,.18);
-}
-input:checked + .box .box-content,
-input:checked + .box .box-close {
+
+input:checked + .box .box-content {
     display: inline-block;
 }
 
 
-.arrows section .box-title {
-    padding-left: 44px;
+.box-title {
     width: 100vw;
 }
 .arrows section .box-title:before {
@@ -120,24 +122,8 @@ input:checked + .box .box-close {
     font-size: 18pt;
     left: 20px;
     transition: transform .15s ease-in-out;
-    color: rgba(0,0,0,.54);
+    color: var(--textLight);
 }
 input:checked + section.box .box-title:before {
     transform: rotate(90deg);
 }
-
-/* styling preview */
-.preview{
-    height: 10vh;
-    width: 100vw;
-    grid-area: preview;
-    }
-
-.preview > p{
-    width: 100vw;
-    padding: 1rem;
-    background-color: black;
-    color: var(--previewColor);
-    font-family: 'led_dot_matrix', sans-serif;
-}
-
