--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -57,6 +57,7 @@ input[type="radio"]{
 }
 
 .colourBox{
+    padding-top: 20px;
     padding-left: 15.5vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -127,3 +128,69 @@ input:checked + .box .box-content {
 input:checked + section.box .box-title:before {
     transform: rotate(90deg);
 }
+
+.presetButton{
+    background-color: var(--blackDark);
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 5px;
+    width: 80vw;
+}
+
+.presetButton:hover{
+    cursor: pointer;
+}
+
+.textForm{
+    margin-top: 20px;
+    display: grid;
+    width: 80vw;
+    padding-left: 10vw;
+}
+
+.textForm > input{
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+}
+
+.textForm > button{
+    margin-top: 20px;
+    width: 20vw;
+    margin-left: 30vw;
+    height: 10vw;
+    background-color: var(--blackDark);
+    border: none;
+    border-radius: 10px;
+    color: var(--textLight);
+}
+
+.preview{
+    display: grid;
+    grid-template-areas: 
+    "preview"
+    "buttons";
+}
+
+.preview > p{
+    grid-area: preview;
+    font-size: 1.5em;
+    font-family: 'led_dot_matrix', sans-serif;  
+}
+
+.previewButtons{
+    grid-area: buttons;
+    display: grid;
+    grid-template-columns: 25vw 25vw 25vw 25vw;
+}
+
+.previewButtons > form > button{
+    width: 20vw;
+    height: 15vw;
+    background-color: var(--backround);
+    border: none;
+    border-radius: 10px;
+    color: var(--textLight);
+}
+
