--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -194,3 +194,6 @@ input:checked + section.box .box-title:before {
     color: var(--textLight);
 }
 
+.testtesttest{
+    background-color: red;
+}
