--- a/lichtkrant-controller/public/css/auth.css
+++ b/lichtkrant-controller/public/css/auth.css
@@ -14,7 +14,13 @@ h2 {
     text-align: center;
     color: #333;
 }
-h1 {
+
+.container > h1 {
+    text-align: center;
+    color: #333;
+}
+
+body > h1 {
     text-align: center;
     color: white;
     text-shadow: 2px 2px black;
@@ -24,6 +30,24 @@ label {
     margin-bottom: 5px;
     color: #666;
 }
+
+.button {
+    background-color: #15616D;
+    color: #fff;
+    padding: 1em 2em;
+    border: none;
+    border-radius: .5em;
+    cursor: pointer;
+    /* width: 100%; */
+    text-decoration: none;
+    text-align: center;
+    display: block;
+}
+
+a {
+    margin-bottom: 1em;
+}
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 10px;
@@ -33,11 +57,12 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 button {
+    font-size: 16px;
     background-color: #15616D;
     color: #fff;
-    padding: 10px 15px;
+    padding: 1em 2em;
     border: none;
-    border-radius: 5px;
+    border-radius: .5em;
     cursor: pointer;
     width: 100%;
 }
