--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -67,11 +67,11 @@ input[type="radio"]{
 
 .colourBox{
     padding-top: 20px;
-    padding-left: 15.5vw;
+    padding-left: 15.5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    width: 69vw;
-    gap: 3vw
+    width: 70%;
+    gap: 3%;
 }
 
 .colourButton{
@@ -137,7 +137,7 @@ input:checked + .box .box-content {
 
 
 .box-title {
-    width: 100vw;
+    width: 100%;
 }
 .arrows section .box-title:before {
     position: absolute;
@@ -158,7 +158,7 @@ input:checked + section.box .box-title:before {
     border-radius: 10px;
     padding: 15px;
     margin: 5px;
-    width: 80vw;
+    width: 80%;
 }
 
 .presetButton:hover{
@@ -168,8 +168,8 @@ input:checked + section.box .box-title:before {
 .textForm{
     margin-top: 20px;
     display: grid;
-    width: 80vw;
-    padding-left: 10vw;
+    width: 80%;
+    padding-left: 10%;
 }
 
 .textForm > input{
@@ -180,8 +180,8 @@ input:checked + section.box .box-title:before {
 
 .textForm > button{
     margin-top: 20px;
-    width: 20vw;
-    margin-left: 30vw;
+    width: 20%;
+    margin-left: 30%;
     height: 10vw;
     background-color: var(--blackDark);
     border: none;
@@ -205,12 +205,12 @@ input:checked + section.box .box-title:before {
 .previewButtons{
     grid-area: buttons;
     display: grid;
-    grid-template-columns: 25vw 25vw 25vw 25vw;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .previewButtons > form > button{
-    width: 20vw;
-    height: 15vw;
+    width: 80%;
+    height: 300%;
     background-color: var(--blackDark);
     border: none;
     border-radius: 10px;
@@ -275,4 +275,14 @@ input:checked + section.box .box-title:before {
 
 .material-symbols-rounded {
     vertical-align: bottom;
+}
+
+@media (orientation: landscape){
+    .box, .box-content{
+        width: 50vw;
+    }
+
+    body{
+        background-color: var(--backround);
+    }
 }
