Squashed commit of the following:
commit 92400bfd57ce8f89df2e5cea498c83a8a94d5a40
Author: tomlommerse <tomlommerse2001@gmail.com>
Date:   Tue May 23 21:49:08 2023 +0200

    styling fix

commit daa5907f4332dafab303ee0e430d7987667cf2ad
Author: tomlommerse <tomlommerse2001@gmail.com>
Date:   Tue May 23 15:19:39 2023 +0200

    hover

commit 5e6e7db38eea9cd9b4050bb51f043a2f2bf62572
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Mon May 22 18:09:00 2023 +0200

    Save vertaald naar Opslaan

commit ed5a43e9a1093c6359cdb6d1f77e326a51046f6b
Author: tomlommerse <tomlommerse2001@gmail.com>
Date:   Mon May 22 18:06:29 2023 +0200

    Final styling

commit eda062946827f97f685959a556f3723d6dad29ad
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Mon May 22 17:14:19 2023 +0200

    bugfixes

commit ab0d157bf1a1871916b2554d6c4045174dbdc571
Merge: 2ce78fd 5e0815b
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Mon May 22 15:49:46 2023 +0200

    Merge branch 'RJ' of https://github.com/rsplietho/IPMEDT5 into RJ

commit 2ce78fd722c5300104001a9724d0963d2f1d19f5
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Mon May 22 15:40:36 2023 +0200

    weather stuff and styling

commit 5e0815ba62885e75c76cad1f51bc00d34b46d90b
Author: tomlommerse <tomlommerse2001@gmail.com>
Date:   Sun May 21 22:58:09 2023 +0200

    landscape styling

commit e2588e73e03d41fdfe71a6c043cca3ef57f2f3d8
Author: tomlommerse <tomlommerse2001@gmail.com>
Date:   Fri May 19 13:50:57 2023 +0200

    Update main.css

commit bc0b08753e9d5789da5280c859dae5fde095ac52
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Mon May 15 15:27:43 2023 +0200

    modes fixed

commit 4ecc87c91bbdaa1a653596f9a8778cbc04ac9055
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Mon May 15 14:36:21 2023 +0200

    modes work

commit b1a9647297d5103730dd1961b1ec0a786e4c95b5
Author: rsplietho <s1135132@student.hsleiden.nl>
Date:   Wed May 10 16:19:00 2023 +0200

    added weather

commit bd34ac

--- a/lichtkrant-controller/public/css/auth.css
+++ b/lichtkrant-controller/public/css/auth.css
@@ -7,46 +7,35 @@ body {
     max-width: 400px;
     padding: 20px;
     background-color: #fff;
-    border-radius: .5em;
+    border-radius: 5px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 h2 {
     text-align: center;
     color: #333;
 }
-.title {
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px black;
-}
+
 .container > h1 {
     text-align: center;
     color: #333;
 }
-img {
-    max-height:100%; 
-    max-width:100%;
-    /* padding-top: 1em; */
-    margin-top: 1em;
-    border-radius: .5em;
+
+body > h1 {
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 label {
     display: block;
     margin-bottom: 5px;
     color: #666;
 }
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
-}
-a {
+
+.button {
     background-color: #15616D;
     color: #fff;
     padding: 1em 2em;
+    margin: 1em 0;
     border: none;
     border-radius: .5em;
     cursor: pointer;
@@ -55,10 +44,33 @@ a {
     text-align: center;
     display: block;
 }
-button:hover {
+
+a {
+    margin-bottom: 1em;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+button {
+    font-size: 16px;
+    background-color: #15616D;
+    color: #fff;
+    padding: 1em 2em;
+    border: none;
+    border-radius: .5em;
+    cursor: pointer;
+    width: 100%;
+}
+button:hover, .button:hover {
     background-color: white;
     color: #15616D;
-    border: 2px solid #15616D;
+    outline: 2px solid #15616D;
 }
 @media only screen and (max-width: 600px) {
     .container {
@@ -66,6 +78,6 @@ button:hover {
     }
 }
 
-.logout {
-    background-color: #ff544b;
+.error {
+    color: #ff544b;
 }
