--- a/lichtkrant-controller/public/css/main.css
+++ b/lichtkrant-controller/public/css/main.css
@@ -5,11 +5,19 @@
     
 }
 
+p {
+    vertical-align: bottom;
+}
+
 * {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+}
+
+a:visited {
+    color: var(--textLight);
 }
 
 body{
@@ -18,8 +26,9 @@ body{
     "nav"
     "preview"
     "accordion";
-    width: 100vw;
+    width: 100%;
     background-color: var(--backround);
+    color: var(--textLight);
 }
 
 nav{
@@ -58,18 +67,18 @@ input[type="radio"]{
 
 .colourBox{
     padding-top: 20px;
-    padding-left: 15.5vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    width: 69vw;
-    gap: 3vw
+    width: 70%;
+    padding-left: 20%;
+    gap: 3%;
 }
 
 .colourButton{
     width: 5em;
     height: 5em;
     border: none;
-    border-radius: 10px;
+    border-radius: .5em;
 }
 
 .colour-input {
@@ -89,8 +98,7 @@ input[type="radio"]{
 .box {
     position: relative;
     background: white;
-
-    transition: all .15s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
 .box::before {
@@ -120,15 +128,17 @@ header.box {
     display: none;
     background-color: var(--backround);
     width: 100vw;
+    transition: max-height 0.4s ease-out;
 }
 
 input:checked + .box .box-content {
     display: inline-block;
+
 }
 
 
 .box-title {
-    width: 100vw;
+    width: 100%;
 }
 .arrows section .box-title:before {
     position: absolute;
@@ -143,24 +153,11 @@ input:checked + section.box .box-title:before {
     transform: rotate(90deg);
 }
 
-.presetButton{
-    background-color: var(--blackDark);
-    border: none;
-    border-radius: 10px;
-    padding: 15px;
-    margin: 5px;
-    width: 80vw;
-}
-
-.presetButton:hover{
-    cursor: pointer;
-}
-
 .textForm{
     margin-top: 20px;
     display: grid;
-    width: 80vw;
-    padding-left: 10vw;
+    width: 80%;
+    padding-left: 10%;
 }
 
 .textForm > input{
@@ -171,12 +168,11 @@ input:checked + section.box .box-title:before {
 
 .textForm > button{
     margin-top: 20px;
-    width: 20vw;
-    margin-left: 30vw;
-    height: 10vw;
+    width: 100%;
+    height: 200%;
     background-color: var(--blackDark);
     border: none;
-    border-radius: 10px;
+    border-radius: .5em;
     color: var(--textLight);
 }
 
@@ -196,16 +192,37 @@ input:checked + section.box .box-title:before {
 .previewButtons{
     grid-area: buttons;
     display: grid;
-    grid-template-columns: 25vw 25vw 25vw 25vw;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-bottom: 10%;
 }
 
-.previewButtons > form > button{
-    width: 20vw;
-    height: 15vw;
-    background-color: var(--backround);
+.presetButton{
+    background-color: var(--blackDark);
     border: none;
-    border-radius: 10px;
+    border-radius: .5em;
+    padding: 15px;
+    margin: 5px;
+    width: 80%;
+}
+
+.presetButton:hover{
+    cursor: pointer;
+}
+
+
+.previewButtons > form > button{
+    width: 80%;
+    height: 150%;
+    margin: 1em 0;
+    background-color: var(--blackDark);
+    border: 10px;
+    border-color: var(--blackDark);
+    border-radius: .5em;
     color: var(--textLight);
+}
+
+.previewButtons > form > button:hover {
+    background-color: gray;
 }
 
 /* login styling */
@@ -258,8 +275,26 @@ input:checked + section.box .box-title:before {
     color: #15616D;
     outline: 2px solid #15616D;
 }
-@media only screen and (max-width: 600px) {
+@media (orientation: landscape) {
     .body_login  .container {
         max-width: 300px;
     }
+
+    .box, .box-content{
+        width: 40vw;
+    }
+}
+
+.material-symbols-rounded {
+    vertical-align: bottom;
+}
+
+.userpage > .button, .userPanel > .button, .adminPanel > .button {
+    vertical-align: middle;
+    margin: 12,5% 0;
+    width: 70%;
+}
+
+button:hover, .box-title:hover{
+    cursor: pointer;
 }
